# soprano

./: .gitignore  Cargo.toml  README.md  check_tokenizer.py  debug_inference.py  download_model.py  repomix-output.xml  vocos_config.json
candle/: Cargo.toml  config.json  convert.py  debug_rust_v2.txt  debug_rust_v3.txt  debug_rust_v4.txt  debug_rust_v5.txt  debug_rust_v6.txt  fix_tokenizer.py  tokenizer.json
candle/src/: main.rs  qwen.rs  vocos.rs
crates/soprano-cli/: Cargo.toml
crates/soprano-cli/src/: main.rs
crates/soprano-core/: Cargo.toml
crates/soprano-core/src/: lib.rs  text.rs
crates/soprano-server/: Cargo.toml
crates/soprano-server/src/: main.rs  routes.rs  sse.rs  websocket.rs
soprano/: tts.py
src/: main.rs  vocos.rs
