[package]
name = "soprano-candle"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = "0.8.4"
candle-nn = "0.8.4"
candle-transformers = "0.8.4"
tokenizers = "0.22"
anyhow = "1.0"
hound = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
hf-hub = "0.4"
rand = "0.8"
realfft = "3"
rustfft = "6"
regex = "1.12.2"
fancy-regex = "0.17.0"
lazy_static = "1.5"
