[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/user/soprano-candle"

[workspace.dependencies]
# ML Framework
candle-core = "0.8.4"
candle-nn = "0.8.4"
candle-transformers = "0.8.4"

# Tokenization
tokenizers = "0.22"

# Utilities
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hf-hub = "0.4"
rand = "0.8"

# Audio
hound = "3.5"
realfft = "3"
rustfft = "6"

# Text processing
regex = "1.12"
fancy-regex = "0.17"
lazy_static = "1.5"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Server (for soprano-server)
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures = "0.3"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
