[package]
name = "soprano-candle"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { version = "0.8.0" }
candle-nn = "0.8.0"
candle-transformers = "0.8.0"
tokenizers = "0.19.1"
anyhow = "1.0"
hound = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
hf-hub = "0.3.2"
