[package]
name = "soprano-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Soprano TTS - high-fidelity text-to-speech"

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
tokenizers.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
hf-hub.workspace = true
rand.workspace = true
hound.workspace = true
realfft.workspace = true
rustfft.workspace = true
regex.workspace = true
fancy-regex.workspace = true
lazy_static.workspace = true

[lib]
name = "soprano_core"
path = "src/lib.rs"
