[package]
name = "soprano-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP API server for Soprano TTS (OpenAI/ElevenLabs compatible)"

[dependencies]
soprano-core = { path = "../soprano-core" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
futures.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "soprano-server"
path = "src/main.rs"
